//protoc --gofast_out=. ./p2p/proto/msg.proto
syntax = "proto3";

option go_package = "./p2p/proto/msgpb";

message Message {
  //数据
  bytes data = 1;
  //签名
  bytes signature = 2;
}

message Peer {
  string pubkey = 1;
  string multiaddr = 2;
}

message FindPeerReq {
  //目标节点
  string target_pubkey = 2;
  //路由节点
  repeated Peer route = 3;
}

message FindPeerResp {
  //目标节点
  string target_pubkey = 2;
  //路由节点
  repeated Peer route = 3;
}